BOLT-24177, fix post layout issue

--- a/app/styles/v2/partials/pages/PostAdPage/_pageMain.scss
+++ b/app/styles/v2/partials/pages/PostAdPage/_pageMain.scss
@@ -113,7 +113,7 @@ $labelMargin: 8%;
 }
 
 @include from-breakpoint($medium-break) {
-	.post-ad-page {
+	.post-ad-content {
 		position: relative;
 		max-width: 1168px;
 		margin: 0 auto;
